--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1",
+    "yarn": "^1.22.11",
     "yup": "^0.32.9"
   },
   "scripts": {
